lab1/Test/L1-A-4-43.cmm
float g_ZtXY9D4_oDN ( {
  float || eIZRzoAi7VDnoJzPib [ 109680901 ] [ 877355763 
    ] = - - DuvqGglALPOkqcJ = ZkhD851 , K = SW56FDnKOz 
    , VtL ;
  if ( PXTKrhko1RLbkSxQFy ( AcGYVVqN ) > rGzmEhwH 
    != wiVrD2ChjJmHy <= TAy5FC8SldSSlLBw >= lZkhYj_xklPrjf 
    >= QGk >= u == == M5B69bVMaxuj8A && SVX && uKZNbPVjMibW75_kfJJ 
    )   ihdk ;
else   gLC1ij7z2m_4eplUzhi ;

}
int 
float ;
float ;
&& 